[package]
name = "my-mini-redis"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
clap = { version = "4.3.8", features = ["derive"] }
bytes = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
atoi = "2.0.0"
async-trait = "0.1.73"
